FIxing overlapping text on tentative score

--- a/liwords-ui/src/gameroom/scss/gameroom.scss
+++ b/liwords-ui/src/gameroom/scss/gameroom.scss
@@ -429,7 +429,6 @@
   border-radius: 10%;
   font-size: 12px;
   font-weight: bold;
-  opacity: 0.8;
   border: 1px solid $color-timer-dark;
   background: $color-timer-light;
   color: $color-timer-dark;
